[package]
name = "vr-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.2"
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.17.0", features = [ "v4" ] }