[package]
name = "vr-replica"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.9.5"
uuid = { version = "1.17.0", features = [ "v4" ] }
