[package]
name = "vr-replica"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
clap = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.9.5"
tower-http = { version = "0.1", featurees = ["full"] }